--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  width: 600px;
-  margin: 32px auto;
+  width: 100%;
+  margin: 0 auto;
 }
 
 code {
