--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,6 +6,7 @@ television {
   .television__top {
     width: 300px;
     margin: auto;
+    margin-top: 40px;
     position: relative;
   }
   
@@ -40,8 +41,9 @@ television {
   .television__center {
      position: relative;
      z-index: 2;
-     width: 650px;
-     height: 450px;
+     width: 80%;
+     min-width: 750px;
+     height: 550px;
      background-color: #7a4e27;
      border: solid 3px #eef4c4;
      box-shadow: -10px -10px #d64832;
@@ -51,8 +53,9 @@ television {
   }
   
   .television__screen {
-     width: 550px;
-     height: 440px;
+     width: 85%;
+     min-width: 650px;
+     height: 545px;
      background-color: #eed5b6;
      border-radius: 48px;
      float: left;
@@ -62,7 +65,7 @@ television {
      width: 70px;
      height: 190px;
      background-color: #efd6b7;
-     border-radius: 48px;
+     border-radius: 28px;
      float: right;
   }
   
