--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,11 +3,53 @@
     background: #7a4e27;
     color: #eef4c4;
     margin: 0;
-    margin-bottom: 30px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    /* padding: 0 20px; */
-    padding-right: 20px;
-    padding-left: 20px
+    justify-content: space-between;
+}
+
+.Navbar h1 {
+    padding: 0 30px;
+}
+
+.burger-menu,
+.burger-menu.open {
+  display: inline-block;
+  cursor: pointer;
+  /* position: fixed; */
+  right: 30px;
+  /* bottom: 40px; */
+  z-index: 9999;
+  background: #eef4c4;
+  padding: 17px;
+  border-radius: 25px;
+  box-shadow: 0 1px 4px #d64832;
+}
+
+.burger-menu {
+  margin-right: 20px;
+}
+
+.burger-menu .bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 3px;
+  background-color: #7a4e27;
+  margin: 4px 0;
+  transition: 0.4s;
+}
+
+.burger-menu.open .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-4px, 4px);
+  transform: rotate(-45deg) translate(-4px, 4px);
+}
+
+.burger-menu.open .bar2 {
+  opacity: 0;
+}
+
+.burger-menu.open .bar3 {
+  -webkit-transform: rotate(45deg) translate(-6px, -6px);
+  transform: rotate(45deg) translate(-6px, -6px);
 }
