--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 body {
   margin: 0;
   padding: 0;
+  padding-bottom: 30px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 100%;
+  height: 100%;
   margin: 0 auto;
+  background: -webkit-linear-gradient(45deg,rgba(171, 0, 0, 0.6) 10%,transparent 10%,transparent 20%,rgba(0,186,255,0.6) 20%,rgba(0,186,255,0.6) 30%,transparent 30%,transparent 40%,rgba(10,53,10,0.6) 40%,rgba(10,53,10,0.6) 50%,transparent 50%,transparent 60%,rgba(191,128,12,0.6) 60%,rgba(191,128,12,0.6) 70%,transparent 70%,transparent 80%,rgba(165, 165, 28, 0.6) 80%,rgba(165, 165, 28, 0.6) 90%,transparent 90%,transparent 100%),-webkit-linear-gradient(135deg,rgba(171, 0, 0, 0.6) 10%,transparent 10%,transparent 20%,rgba(0,186,255,0.6) 20%,rgba(0,186,255,0.6) 30%,transparent 30%,transparent 40%,rgba(10,53,10,0.6) 40%,rgba(10,53,10,0.6) 50%,transparent 50%,transparent 60%,rgba(191,128,12,0.6) 60%,rgba(191,128,12,0.6) 70%,transparent 70%,transparent 80%,rgba(165, 165, 28, 0.6) 80%,rgba(165, 165, 28, 0.6) 90%,transparent 90%,transparent 100%);   
+  background-repeat: none;
+  background-size: cover; 
 }
 
 code {
