--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -56,7 +56,8 @@ television {
      width: 85%;
      min-width: 650px;
      height: 545px;
-     background-color: #eed5b6;
+     /* background-color: #eed5b6; */
+     background:linear-gradient(45deg, black, grey);
      border-radius: 48px;
      float: left;
   }
@@ -81,13 +82,25 @@ television {
     height: 100%;
     width: 100%;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 25px;
+    text-align: center;
     background: rgb(235, 199, 39);
-    border: 2px solid red;
+    border: 5px solid red;
   }
 
   .switch button:hover {
     background: #efd6b7;
+    cursor: pointer;
+  }
+
+  .switch button:active {
+    box-shadow: inset 2px 2px 10px #333;
+    background: #f3cc9d;
+    color: whitesmoke;
+  }
+
+  .switch button:focus {
+    outline: none
   }
   
   .television__channels {
