--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -1,10 +1,16 @@
 h1 {
-    padding: 0 10px;
+    padding: 10px 10px;
+    margin: 0;
 }
 
 p {
     padding: 0 25px;
     margin-bottom: 25px;
+}
+
+.Article:hover {
+    cursor: pointer;
+    background: #f8ad51;
 }
 
 .articleStats {
@@ -16,4 +22,5 @@ hr {
     width: 70%;
     height: 0.2rem;
     background: green;
+    margin: 0 auto;
 }
