--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -3,9 +3,15 @@ h1 {
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color:#5a5656
+}
+
 p {
     padding: 0 25px;
     margin-bottom: 25px;
+    font-size: 25px;
 }
 
 .Article:hover {
