Comment Router set up

--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -36,9 +36,9 @@ hr {
     justify-content: space-around;
 }
 
-.SingleArticleBody h1 {
+.SingleArticleTitle {
     background: maroon;
-    height: 4rem;
+    height: 6rem;
     display: flex;
     justify-content: center;
     align-items: center;
