--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -19,6 +19,7 @@ p {
     background: #f8ad51;
 }
 
+
 .articleStats {
     display: flex;
     justify-content: space-around;
@@ -38,9 +39,31 @@ hr {
 
 .SingleArticleTitle {
     background: maroon;
-    height: 6rem;
+    height: 7rem;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 40px;
 }
+
+.BackButton:hover {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+  }
+  
+  @keyframes shake {
+    10%, 90% {
+      transform: translate3d(-1px, 0, 0);
+    }
+    20%, 80% {
+      transform: translate3d(2px, 0, 0);
+    }
+    30%, 50%, 70% {
+      transform: translate3d(-4px, 0, 0);
+    }
+    40%, 60% {
+      transform: translate3d(4px, 0, 0);
+    }
+  }
