--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -25,7 +25,7 @@ p {
     justify-content: space-around;
 }
 
-hr {
+.ArticleHR {
     width: 70%;
     height: 0.2rem;
     background: green;
@@ -46,24 +46,83 @@ hr {
     font-size: 40px;
 }
 
+
+ /* -------- SINGLE ARTICLE BUTTONS -------- */
+
+.ButtonLinks {
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 0;
+}
+
+.BackButton {
+    height: 2.5rem;
+    width: 80px;
+    font-size: 26px;
+    background: maroon;
+    border-radius: 20px;
+    color: #eef4c4;
+    box-shadow: 3px 3px 2px rgb(71, 39, 12);
+    border: 1px black solid
+}
+
+.BackButton:active {
+    box-shadow: 1px 1px 2px  rgb(71, 39, 12);
+    transform: translateY(2px)
+} 
+
+.BackButton:focus {
+    outline: none;
+}
+
 .BackButton:hover {
     animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
     transform: translate3d(0, 0, 0);
     backface-visibility: hidden;
     perspective: 1000px;
-  }
-  
-  @keyframes shake {
-    10%, 90% {
-      transform: translate3d(-1px, 0, 0);
-    }
-    20%, 80% {
-      transform: translate3d(2px, 0, 0);
-    }
-    30%, 50%, 70% {
-      transform: translate3d(-4px, 0, 0);
-    }
-    40%, 60% {
-      transform: translate3d(4px, 0, 0);
-    }
-  }
+    cursor: pointer;
+}
+
+@keyframes shake {
+10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+}
+20%, 80% {
+    transform: translate3d(2px, 0, 0);
+}
+30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+}
+40%, 60% {
+    transform: translate3d(4px, 0, 0);
+}
+}
+
+.CommentButton {
+    height: 1.5rem;
+    border-radius: 65px;
+    width: 25px;
+    font-size: 40px;
+    text-align: center;
+    margin: 0 10px;
+    box-shadow: 4px 4px 1px black;
+    outline: none;
+    border: 1px black solid;
+}
+
+.CommentButton:hover {
+    cursor: pointer;
+}
+
+.CommentButton:active {
+    box-shadow: 1px 1px 1px black;
+    transform: translateY(3px)
+}
+
+.minus {
+    background: red
+}
+
+.add {
+    background: green
+}
