--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -177,3 +177,45 @@ television {
 }
 
 
+@media (max-width: 810px) {
+  .television__center {
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+    width: 95%;
+    height: 90%;
+    min-width: 250px;
+    padding: 10px 15px;
+  }
+  .television__screen {
+    width: 98%;
+    min-width: 250px;
+    height: 545px;
+    background:linear-gradient(45deg, black, grey);
+    border-radius: 48px;
+    float: left;
+    overflow: auto
+  }
+  .television__channels-wrapper {
+    height: 70px;
+    width: 350px;
+    background-color: #efd6b7;
+    border-radius: 28px;
+    float: right;
+    padding-bottom: 10px;
+  }
+  .television__channels {
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .switch {
+    width: 100px;
+    height: 60px;
+    display: block;
+    /* position: absolute; */
+    bottom: 15px;
+    /* right: 15px; */
+  }
+}
