--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -64,11 +64,12 @@ television {
 
 .television__channels-wrapper {
   width: 100px;
-  height: 350px;
+  height: 150px;
   background-color: #efd6b7;
   border-radius: 28px;
   float: right;
 }
+
 
 .television__channels h2 {
   margin: 0
@@ -76,7 +77,7 @@ television {
 
 .switch {
   width: 100px;
-  height: 60px;
+  height: 80px;
   position: absolute;
   bottom: 15px;
   right: 15px;
@@ -118,10 +119,10 @@ television {
 .television__channel {
   list-style-type: none;
   background-color: rgb(235, 199, 39);
-  border: 5px solid #7f4b23;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+  border: 7px solid #7f4b23;
+  width: 60px;
+  height: 60px;
+  border-radius: 15px;
   margin: 5px;
   font-size: 27px;
   float: left;
@@ -178,17 +179,22 @@ television {
 
 
 @media (max-width: 810px) {
+  .television {
+    width: 99%;
+  }
+
   .television__center {
     display: flex;
     flex-direction: column;
     z-index: 2;
-    width: 95%;
+    width: 96%;
     height: 90%;
     min-width: 250px;
     padding: 10px 15px;
+    margin: 0;
   }
   .television__screen {
-    width: 98%;
+    width: 100%;
     min-width: 250px;
     height: 545px;
     background:linear-gradient(45deg, black, grey);
@@ -197,25 +203,40 @@ television {
     overflow: auto
   }
   .television__channels-wrapper {
-    height: 70px;
-    width: 350px;
-    background-color: #efd6b7;
+    margin-top: 20px;
+    height: 80px;
+    width: 215px;
+    background-color: #7d4d25;
     border-radius: 28px;
     float: right;
     padding-bottom: 10px;
   }
+
   .television__channels {
     padding: 0;
     display: flex;
     flex-direction: row;
+    position: relative;
     align-items: center;
+    bottom: 14px;
+    left: 5px;
   }
+
+  li.television__channel.votes {
+    border: 7px solid red;
+  }
+
+  .television__channels h2 {
+    margin: 0;
+    font-size: 32px;
+    color: #efd6b7
+  }
+
   .switch {
-    width: 100px;
-    height: 60px;
+    width: 105px;
+    height: 80px;
     display: block;
-    /* position: absolute; */
-    bottom: 15px;
-    /* right: 15px; */
+    bottom: 16px;
+    margin-right: 5px;
   }
 }
