--- a/src/components/Articles/AllArticles.css
+++ b/src/components/Articles/AllArticles.css
@@ -2,20 +2,27 @@
     display: flex;
 }
 
-.AllArticlesSelection ul {
+.AllArticlesSelection {
     list-style: none;
     display: flex;
     justify-content: space-around;
     border-bottom: 5px solid black;
     margin: 0;
-    padding: 20px;
+    padding: 5px;
     background: grey;
+}
+
+.AllArticlesSelection ul {
+    display: flex;
+    justify-content: space-around;
+    width: 50%;
+    margin: 0;
 }
 
 .AllArticlesSelection ul li {
     border: 2px solid black;
-    width: 80px;
-    height: 80px;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,4 +39,81 @@
 .AllArticlesSelection ul li:active {
     background: gold;
     box-shadow: inset 5px 5px 5px black;
+}
+
+.SortItems {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    width: 50px;
+}
+
+.SortItems h2 {
+    margin: 0
+}
+
+.AddArticle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.AddNewArticle {
+    display: flex;
+    height: 50px;
+    width: 50px;
+    position: relative;
+    border: 4px solid black;
+    background: gold;
+    border-radius: 30px;
+    margin: 5px
+}
+.AddNewArticle:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    left: 5px;
+    margin-top: -5px;
+    height: 10px;
+    background: maroon;
+}
+.AddNewArticle:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    margin-left: -5px;
+    width: 10px;
+    height: 40px;
+    background: maroon;
+}
+
+.AddNewArticle:hover {
+    background: yellow;
+    cursor: pointer;
+    transform: scale(1.2)
+}
+
+.AddNewArticle:active {
+    transform: scale(1.1)
+}
+
+.LoginWarning {
+    padding: 10px;
+    background: red;
+    font-size: 30px;
+}
+
+.LoginWarning h2 {
+    margin: 0;
+}
+
+a.Here:hover {
+    font-size: 30px;
+    margin: 0;
 }
