--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -59,7 +59,8 @@ television {
   background:linear-gradient(45deg, black, grey);
   border-radius: 48px;
   float: left;
-  overflow: auto
+  overflow: auto;
+  border: 5px solid black;
 }
 
 .television__channels-wrapper {
@@ -192,20 +193,21 @@ television {
     display: flex;
     flex-direction: column;
     z-index: 2;
-    width: 96%;
+    width: 95%;
     height: 90%;
     min-width: 250px;
     padding: 10px 15px;
     margin: 0;
   }
   .television__screen {
-    width: 100%;
+    width: 99%;
     min-width: 250px;
     height: 545px;
     background:linear-gradient(45deg, black, grey);
     border-radius: 48px;
     float: left;
-    overflow: auto
+    overflow: auto;
+    border: 5px solid black;
   }
   .television__channels-wrapper {
     margin-top: 20px;
