--- a/src/components/Navbar/NavbarOpen.css
+++ b/src/components/Navbar/NavbarOpen.css
@@ -36,6 +36,10 @@ a {
    cursor: pointer;
 }
 
+.TopicItemsInFull {
+    background: maroon;
+}
+
 @media (max-width: 810px) {
     .Menu {
         width: 100%;
