--- a/src/components/Articles/AddArticle.css
+++ b/src/components/Articles/AddArticle.css
@@ -94,3 +94,9 @@
 .SelectSubmit input:active {
     transform: scale(1);
 }
+
+@media (max-width: 810px) {
+    .SelectSubmit {
+        width: 80%
+    }
+}
