--- a/src/components/Users/Users.css
+++ b/src/components/Users/Users.css
@@ -45,3 +45,36 @@ div.EachUser:hover {
     font-size: 30px;
     margin: 10px;
 }
+
+@media (max-width: 810px) {
+    .FullEachUserH1 {
+        margin: 10px;
+        font-size: 25px;
+    }
+    div.EachUser {
+        border-radius: 30px;
+        border: 5px solid black;
+        display: flex;
+        width: 80%;
+        margin: 0 auto 25px;
+        height: 100px;
+    }
+
+    .EachUserDetails p {
+        font-size: 18px;
+        margin: 0;
+        /* text-align: left */
+    }
+
+    .EachUserImage img {
+        width: 100px;
+    }
+
+    .EachUserDetails {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
