--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -95,7 +95,8 @@ television {
   border-radius: 28px;
   font-size: 45px;
   text-align: center;
-  background: rgb(235, 199, 39);
+  background: yellow;
+  box-shadow: inset -6px -6px gold;
   border: 5px solid red;
 }
 
@@ -195,14 +196,14 @@ television {
     display: flex;
     flex-direction: column;
     z-index: 2;
-    width: 95%;
+    width: 100%;
     height: 90%;
     min-width: 250px;
-    padding: 10px 15px;
+    padding: 10px 0px;
     margin: 0;
   }
   .television__screen {
-    width: 99%;
+    width: 97.5%;
     min-width: 250px;
     height: 545px;
     background:linear-gradient(45deg, black, grey);
@@ -256,11 +257,13 @@ television {
     font-size: 0;
   }
 
-  .switch {
+  .switch button {
     width: 105px;
     height: 80px;
     display: block;
     bottom: 16px;
     margin-right: 5px;
+    /* background: rgb(235, 199, 39);
+    box-shadow: inset -6px -6px gold; */
   }
 }
