--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -100,33 +100,45 @@ input.LoginInput:focus {
 
 .FullLogIn {
     display: absolute;
-    /* flex-direction: column;
-    align-items: center; */
 }
 
 @media (max-width: 810px) {
     .LoggedIn {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: center;
         border: 10px solid black;
         border-radius: 40px;
         width: 80%;
         margin: 3% auto 5px;
         background: gold;
-        height: 240px;
-        padding: 0 15px;
+        height: 210px;
+        padding: 10px 15px;
     }
 
     .LoggedIn img {
         border-radius: 30px;
-        height: 60%;
-        width: 150px;
+        height: 40%;
+        width: 120px;
         border: 5px solid black
     }
 
     .LoggedInData h1 {
         padding: 0;
+        font-size: 25px;
+    }
+    
+    .InputButton {
+        width: 90px;
+        font-size: 19px;
+    }
+    .BelongsTo h2 {
+        font-size: 23px;
+        padding: 10px;
+    }
+    .Comment p {
+        font-size: 20px;
+        padding: 10px;
     }
 }
