--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -106,7 +106,7 @@ p {
 }
 
 .CommentButton {
-    height: 1.5rem;
+    height: 25px;
     border-radius: 65px;
     width: 25px;
     font-size: 40px;
