--- a/src/components/Comments/AddComment.css
+++ b/src/components/Comments/AddComment.css
@@ -54,3 +54,9 @@ textarea {
 button.AddComment {
     margin-bottom: 15px;
 }
+
+@media (max-width: 810px) {
+    .AddCommentForm {
+        font-size: 20px;
+    }
+}
