--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   padding-bottom: 30px;
   font-family: 'Patrick Hand', cursive;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0 auto;
   background: -webkit-linear-gradient(45deg,rgba(171, 0, 0, 0.6) 10%,transparent 10%,transparent 20%,rgba(0,186,255,0.6) 20%,rgba(0,186,255,0.6) 30%,transparent 30%,transparent 40%,rgba(10,53,10,0.6) 40%,rgba(10,53,10,0.6) 50%,transparent 50%,transparent 60%,rgba(191,128,12,0.6) 60%,rgba(191,128,12,0.6) 70%,transparent 70%,transparent 80%,rgba(165, 165, 28, 0.6) 80%,rgba(165, 165, 28, 0.6) 90%,transparent 90%,transparent 100%),-webkit-linear-gradient(135deg,rgba(171, 0, 0, 0.6) 10%,transparent 10%,transparent 20%,rgba(0,186,255,0.6) 20%,rgba(0,186,255,0.6) 30%,transparent 30%,transparent 40%,rgba(10,53,10,0.6) 40%,rgba(10,53,10,0.6) 50%,transparent 50%,transparent 60%,rgba(191,128,12,0.6) 60%,rgba(191,128,12,0.6) 70%,transparent 70%,transparent 80%,rgba(165, 165, 28, 0.6) 80%,rgba(165, 165, 28, 0.6) 90%,transparent 90%,transparent 100%);   
   background-repeat: none;
